	http://nsidc.org/data/polar_stereo/ps_grids.html and
	http://nsidc.org/data/nsidc-0051.html
	https://stat.ethz.ch/pipermail/r-sig-geo/2011-October/013067.html
bug fix in stack with with input file name vector and quick=TRUE 
bug fix: mask with maskvalue that is not NA ignored "inverse=TRUE"
new function "validNames" (to avoid using raster:::.goodNames by another package)
	
--- 8-July-2013, version: 2.1-45
bug fix in focal with pad=TRUE (introduced in previous version)
bug fix in terrain/roughness (problem reported by Michael Sumner)
rotate failed with a single-layer RasterBrick (reported by Michael Sumner)

--- 2-July-2013, version: 2.1-41
changes in namespace (disaggregate) to keep compatibility with 'sp'
bug fix in aggregate with expand=FALSE, reported by Koen Hufkens
focal sometimes returns NaN where a NA would be easier to interpret (and use in subsequent calls to focal( , NAonly=T). Trying to return NA now in such cases (reported by Marcia Macedo).

--- 14-June-2013, version: 2.1-37
new argument 'values' to 'trim' to allow trimming for other values that NA
new functions (for Raster objects) which.min and which.max
layers can now be referred to with a $ (as in lists and data.frames)
coercion methods to Extent and RasterLayer from GridTopology contributed by Michael Sumner
bug fixes in crosstab and in zonal, reported by Josh Perlman
bug fix in terrain. flowdir was not computed when used together with other options (bug and fix reported by Etienne Racine)
changed default datatype to FLT8S (from FLT4S) to avoid generalization of large integers
NA value in native arc ascii files now only the flag value (it was any value <= the flag value)
bug fix in assigning colnames when extracting values from RasterBrick

--- 11-April-2013, version: 2.1-25
removed bugs from 'f8' in the writing functions vignette (reported by J. R. Matchett)
fixed bug that occured when creating stack from ascii files if rgdal was not installed